Fix kira z-index

--- a/css/index.css
+++ b/css/index.css
@@ -66,5 +66,4 @@
   top: -0.5em;
   left: -0.5em;
   pointer-events: none;
-  z-index: -1;
 }
